# rust-sqlite-test

./: Cargo.toml  README.md  tasks.json
doc/: create_tasks.sql
src/: main.rs
